# greenbids-tailor-external

./: README.md
.github/workflows/: cd.yaml  chart.yaml  documentation.yaml  image.yaml  images.yaml  pages.yaml  versioning.yaml  wheel.yaml
chart/: Chart.yaml  values.yaml
chart/templates/: NOTES.txt  _helpers.tpl  configmap-env.yaml  deployment.yaml  hpa.yaml  ingress.yaml  service.yaml
chart/templates/tests/: test-connection.yaml
container/: Dockerfile  build_local.sh  docker-compose.yaml  nginx.conf
locust/: locustfile.py
locustfiles/: _utils.py  probes.py  requirements.txt  root.py  rtb.py
python/: .gitignore  pyproject.toml
python/src/greenbids/tailor/: __init__.py  bid_request.py  fabric.py
python/src/greenbids/tailor/core/: __init__.py  __main__.py  app.py  fabric.py  logging.py  models.py  settings.py  telemetry.py
python/src/greenbids/tailor/core/app/: exceptions.py  main.py  profiler.py  resources.py  settings.py
python/src/greenbids/tailor/core/app/routers/: healthz.py  root.py
python/src/greenbids/tailor/load_testing/: _utils.py
python/tests/: test_fabric.py  test_models.py
python/tests/app/: test_resources.py
python/tests/app/routers/: test_root.py
python/tests/test_models_resources/my_test_model/: pyproject.toml
python/tests/test_models_resources/my_test_model/src/greenbids/tailor/models/test/: __init__.py  model.py
