[build-system]
requires = ["hatchling", "hatch.vcs"]
build-backend = "hatchling.build"

[project]
dynamic = ["version"]
name = "greenbids-tailor"
dependencies = [
    "fastapi~=0.111",
    "opentelemetry-api",
    "opentelemetry-sdk",
    "opentelemetry-instrumentation-fastapi",
    "opentelemetry-exporter-otlp-proto-http"
]
requires-python = ">=3.11"
authors = [{ name = "greenbids.ai" }]
description = "Bring traffic shaping to your own cloud"
readme = "../README.md"
license = { file = "../LICENSE" }
keywords = ["traffic shaping", "adtech", "openrtb"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python",
]

[project.urls]
Repository = "https://github.com/greenbids/greenbids-tailor-external.git"

[project.scripts]
greenbids-tailor = "greenbids.tailor.core.__main__:main"


[tool.hatch.build.targets.wheel]
packages = ["src/greenbids"]
[tool.hatch.version]
source = "vcs"
path = "src/greenbids/tailor/core/_version.py"
[tool.hatch.version.raw-options]
root=".."
